# GoogleTest_Testing

./: CMakeLists.txt  dut_sources.cmake  main.cpp  stub_sources.cmake  testcases_sources.cmake  wrap_functions.cmake
DUT/SDS/: test.cpp
DUT/stringReturn/: stringReturn.cpp  stringReturn.h
Stubs/: CMakeLists.txt  Stubs.cpp  Stubs.h  stringReturnMock.cpp  stringReturnMock.h
cmake/Modules/: CodeCoverage.cmake
googletest/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  install_manifest.txt
googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gmock-actions_test  gmock-cardinalities_test  gmock-generated-actions_test  gmock-generated-function-mockers_test  gmock-generated-internal-utils_test  gmock-internal-utils_test  gmock-more-actions_no_exception_test  gmock-more-actions_test  gmock-nice-strict_test  gmock-port_test  gmock-spec-builders_test  gmock_ex_test  gmock_leak_test_  gmock_link_test  gmock_no_rtti_test  gmock_output_test_  gmock_stress_test  gmock_test  gmock_use_own_tuple_test  shared_gmock_test_
googletest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest-death-test_ex_catch_test  gtest-death-test_ex_nocatch_test  gtest-death-test_test  gtest-filepath_test  gtest-linked_ptr_test  gtest-listener_test  gtest-message_test  gtest-options_test  gtest-param-test_test  gtest-port_test  gtest-printers_test  gtest-test-part_test  gtest-tuple_test  gtest-typed-test_test  gtest-unittest-api_test  gtest_break_on_failure_unittest_  gtest_catch_exceptions_ex_test_  gtest_catch_exceptions_no_ex_test_  gtest_color_test_  gtest_env_var_test_  gtest_environment_test  gtest_filter_unittest_  gtest_help_test_  gtest_list_tests_unittest_  gtest_main_unittest  gtest_no_rtti_unittest  gtest_no_test_unittest  gtest_output_test_  gtest_pred_impl_unittest  gtest_premature_exit_test  gtest_prod_test  gtest_repeat_test  gtest_shuffle_test_  gtest_sole_header_test  gtest_stress_test  gtest_throw_on_failure_ex_test  gtest_throw_on_failure_test_  (+16 more)
testcases/: CMakeLists.txt  testcases.cpp  testcases.h  testcases.hpp  testcasesFixture.hpp
